--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-</head>
-<body></body>
-<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet"
+            href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <style>
+        div{
+            width: 110px;
+            height: 110px;
+            background-color: limegreen;
+            display: inline-block;
+            margin-left: 5px;
+            margin-top: 10px;
+        }
+        section.container{
+            /*background-color: rgb(98, 0, 255);*/
+        }
+        section.container>section{
+            width: 100%;
+            height: 30px;
+        }
+    </style>
+    </head>
+    <body>
+        <section class="container bg-danger">
+        <div>lorem100</div>
+    </s1ection>
+        <section class="container-fluid bg-danger p-0">
+        <div>lorem100
+        </div>
+    </section>
+        <section class="container">
+            <div class="border border-5"></div>
+            <div class="border border-0"></div>
+            <div class="border border-5 border-top-0"></div>
+            <div class="border border-5 border-end-0"></div>
+            <div class="border border-5 border-bottom-0"></div>
+            <div class="border border-5 border-start-0"></div>
+            <div class="border-top border-5"></div>
+            <div class="border-bottom border-5"></div>
+            <div class="border-end border-5"></div>
+            <div class="border-start border-5"></div>
+        </section>
+        <section class="container">
+            <div class="border border-primary border-5"></div>
+            <div class="border border-secondary border-5"></div>
+            <div class="border border-success border-5"></div>
+            <div class="border border-danger border-5"></div>
+            <div class="border border-warning border-5"></div>
+            <div class="border border-info border-5"></div>
+            <div class="border border-light border-5"></div>
+            <div class="border border-white border-5"></div>
+            <div class="border border-dark border-5"></div>
+        </section>
+        <section class="container">
+            <div class="rounded"></div>
+            <div class="rounded-top"></div>
+            <div class="rounded-end"></div>
+            <div class="rounded-bottom"></div>
+            <div class="rounded-start"></div>
+            <div class="rounded-circle"></div>
+            <div class="rounded-pill" style="width: 200px;"></div>
+            <div class="rounded-0"></div>
+            <div class="rounded-1"></div>
+            <div class="rounded-2"></div>
+            <div class="rounded-3"></div>
+            <div class="rounded-4"></div>
+            <div class="rounded-5"></div>
+        </section>
+        <section class="container">
+            <section class="mx-auto bg-danger" style="width:80px;">center</section>
+        </section>
+     <section class="container">
+        <section class="bg-black"></section>
+        <section class="bg-danger"></section>
+        <section class="bg-dark"></section>
+        <section class="bg-light"></section>
+        <section class="bg-secondary"></section>
+        <section class="bg-success"></section>
+        <section class="bg-warning"></section>
+        <section class="bg-white"></section>
+        <section class="bg-info"></section>
+        <section class="bg-primary"></section>
+    </section>
+    <section class="container">
+        <div class="shadow-none p-4 mb-4 bg-light">No shadow</div>
+        <div class="shadow-sm p-4 mb-4 bg-white">Small shadow</div>
+        <div class="shadow p-4 mb-4 bg-white">Default shadow</div>
+        <div class="shadow-lg p-4 mb-4 bg-white">Large shadow</div>
+    </section>
+    </body>
+    <script
+        src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </html>
