--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@
         <div class="shadow p-4 mb-4 bg-white">Default shadow</div>
         <div class="shadow-lg p-4 mb-4 bg-white">Large shadow</div>
     </section>
+             <div class="container mt-4">
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
+                <tr>
+                    <td>Firstname</td><td>Lastname</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>joe</td><td>dani</td>
+                </tr>
+                <tr>
+                    <td>dani</td><td>sani</td>
+                </tr>
+                <tr>
+                    <td>sami</td><td>bani</td>
+                </tr><tr>
+                    <td>mary</td><td>sali</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     </body>
     <script
         src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
