--- a/index.html
+++ b/index.html
@@ -113,6 +113,45 @@
             </tbody>
         </table>
     </div>
+
+                    <button type="button" class="btn">Basic</button>
+<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-dark">Dark</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-link">Link</button>
+
+        <div class="btn-group">
+            <button type="button" class="btn btn-success">Apple</button>
+            <button type="button" class="btn btn-info">Samsung</button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-dark dropdown-toggle"
+                    data-bs-toggle="dropdown">Sony</button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Tablet</a>
+                    <a class="dropdown-item" href="#">Smartphone</a>
+                </div>
+            </div>
+        </div> 
+
+        <h1>buy cars <span class="badge bg-secondary">New</span></h1>
+        <h2>Example heading <span class="badge bg-secondary">New</span></h2>
+        <h3>Example heading <span class="badge bg-secondary">New</span></h3>
+        <h4>Example heading <span class="badge bg-secondary">New</span></h4>
+        <h5>Example heading <span class="badge bg-secondary">New</span></h5>
+        <h6>Example heading <span class="badge bg-secondary">New</span></h6>
+
+        <button type="button" class="btn btn-primary mb-4">
+            Messages <span class="badge bg-danger">4</span>
+        </button>
+        <div class="progress" style="height: 40px;">
+            <div class="progress-bar progress-bar-striped" style="width: 70%;">70%</div>
+        </div>
+        <div class="spinner-border text-muted bg-info"></div>
     </body>
     <script
         src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
