--- a/index.html
+++ b/index.html
@@ -152,6 +152,21 @@
             <div class="progress-bar progress-bar-striped" style="width: 70%;">70%</div>
         </div>
         <div class="spinner-border text-muted bg-info"></div>
+            <div class="dropdown m-5">
+            <button type="button" class="btn btn-primary dropdown-toggle"
+                data-bs-toggle="dropdown">
+                Dropdown button
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Item 1</a></li>
+                <li><a class="dropdown-item" href="#">Item 2</a></li>
+                <li><a class="dropdown-item" href="#">Item 3</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <div class=" fade-img"><img src="./image.jfif" alt></div>
+        </div>
     </body>
     <script
         src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
